--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:orientation="vertical" >
-
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,7 +23,12 @@
             android:textSize="@dimen/_21sdp"
             android:textStyle="bold" />
 
-
+        <!-- Add a ListView to display the list of friends -->
+        <ListView
+            android:id="@+id/friendsListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/_20sdp"/>
 
     </LinearLayout>
 
@@ -39,16 +42,5 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="@dimen/_200sdp"
-        android:layout_height="@dimen/_250sdp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.5"
-        app:layout_constraintHorizontal_bias="0.5"
-        android:src="@drawable/geeks" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
